# benford-law-til

./: .gitignore  README.md  pyproject.toml
.github/setup/: issues.sh  labels.sh  milestones.sh
article/: benford-law-til-pt-BR.md  benford-law-til.md
data/: README.md
data/raw/: world_cities.csv
docs/: motivation.md  thesis.md
exercises/: ex01_empirical.md  ex02_log_uniform.md  ex03_invariance.md  ex04_conformity.md
notebooks/: 01_empirical_observation.ipynb  02_log_uniform_derivation.ipynb  03_scale_invariance.ipynb  04_fraud_demo.ipynb
notes/: phase1-history.md  phase2-log-uniform.md  phase3-pinkham.md  phase4-conformity.md
scripts/: build_datasets.py  exp_conformity_tests.py  exp_fraud_demo.py  exp_scale_invariance.py
src/: __init__.py  benford.py  conformity.py  datasets.py  fraud.py
tests/: test_benford.py  test_conformity.py  test_datasets.py  test_fraud.py
